2002-09-06  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/tool-options.c (sp_tool_options_dialog_setup): Implement
	using sp_event_context_config_widget

	* src/event-context.h: Added ::config_widget virtual method

	* src/event-context.c (sp_event_context_config_widget): New method

	* src/dyna-draw-context.c (sp_dyna_draw_context_config_widget): new method

2002-09-05  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/stroke-style.c (sp_stroke_style_paint_construct): Handler
	(sp_stroke_style_paint_attr_changed): Ditto
	(sp_stroke_style_repr_get_style): Helper
	(sp_stroke_style_paint_update_repr): For SPRepr associated styles
	(sp_stroke_style_paint_changed): Write bare repr if needed
	(sp_stroke_style_line_construct): Handler
	(sp_stroke_style_line_attr_changed): Ditto
	(sp_stroke_style_line_update_repr): Alternate parser
	(sp_stroke_style_width_changed): Write repr if needed
	(sp_stroke_style_any_toggled): Ditto

	* src/dialogs/object-properties.c (sp_object_properties_dialog): build
	optionmenu for choosing between selection/tools

	* src/dialogs/fill-style.c (sp_fill_style_widget_new): Attach attr_changed
	(sp_fill_style_repr_get_style): Helper
	(sp_fill_style_widget_update_repr): Repr-associated version updater
	(sp_fill_style_widget_paint_changed): Write repr instead of item list if needed

	* src/widgets/sp-widget.c (spw_repr_attr_changed): Repr callback
	(sp_widget_new_global): Build from sodipodi
	(sp_widget_new_repr): Build from repr
	(sp_widget_construct_global): Constructor
	(sp_widget_construct_repr): Ditto

	* src/style.c (sp_style_new): New method
	(sp_style_read): Move evrything here
	(sp_style_read_from_object): Frontend
	(sp_style_read_from_repr): Ditto

2002-09-04  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-path.c (sp_path_build): Update SODIPODI-PATH-NODE-TYPES attribute

2002-09-03  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-text.c (sp_text_set_shape): Oooooooops, use MAX for bbox other corner
